--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,48 @@
-theme: jekyll-theme-minimal
+# Default front-matter variables: global, pages and posts
+defaults:
+- scope:
+    path: ""
+    type: "pages"
+  values:
+    layout: "default"
+
+- scope:
+    path: ""
+    type: "posts"
+  values:
+    layout:     "post"
+    date_fmt:   "%F"
+    categories: "news"
+    comments:   false
+
+exclude:
+- assets/css/style.css
+- Gemfile
+- Gemfile.lock
+- LICENSE
+- new_post.sh
+- node_modules
+- package.json
+- package-lock.json
+- Rakefile
+- README.md
+- setup.sh
+- TODO.md
+- yarn.lock
+- yarn-error.log
+
+plugins:
+- jekyll-sitemap
+- jemoji
+
+name: "CYCFI"
+description: ""
+url: "https://cycfi.github.io"
+
+repository:
+  branch: "master"
+  url: "https://github.com/cycfi"
+
+authors:
+  content: "Joel de Guzman"
+  web: "Joel de Guzman"
