--- a/_config.yml
+++ b/_config.yml
@@ -15,33 +15,33 @@ defaults:
     categories: "news"
     comments:   false
 
-exclude:
-- assets/css/style.css
-- Gemfile
-- Gemfile.lock
-- LICENSE
-- new_post.sh
-- node_modules
-- package.json
-- package-lock.json
-- Rakefile
-- README.md
-- setup.sh
-- TODO.md
-- yarn.lock
-- yarn-error.log
+# exclude:
+# - assets/css/style.css
+# - Gemfile
+# - Gemfile.lock
+# - LICENSE
+# - new_post.sh
+# - node_modules
+# - package.json
+# - package-lock.json
+# - Rakefile
+# - README.md
+# - setup.sh
+# - TODO.md
+# - yarn.lock
+# - yarn-error.log
 
 plugins:
 - jekyll-sitemap
 - jemoji
 
-name: "CYCFI"
-description: ""
-url: "https://cycfi.github.io"
+# name: "CYCFI"
+# description: ""
+# url: "https://cycfi.github.io"
 
-repository:
-  branch: "master"
-  url: "https://github.com/cycfi"
+# repository:
+#  branch: "master"
+#  url: "https://github.com/cycfi"
 
 authors:
   content: "Joel de Guzman"
