--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "cycfi",
 	"version": "0.1.0",
 	"author": "cycfi",
-	"homepage": "https://cycfi.github.io/",
+	"homepage": "https://xauditSite/cycfi.github.io/",
 	"scripts": {
 		"css": "node node_modules/npm-run-all/bin/run-s/index.js css-compile api-compile css-prefix css-minify api-minify",
 		"css-compile": "node node_modules/node-sass/bin/node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 _assets/scss/style.scss assets/css/style.css",
@@ -19,10 +19,10 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:cycfi/cycfi.github.io.git"
+		"url": "git@github.com:xauditSite/cycfi.github.io.git"
 	},
 	"bugs": {
-		"url": "https://github.com/cycfi/cycfi.github.io/issues"
+		"url": "https://github.com/xauditSite/cycfi.github.io/issues"
 	},
 	"license": "MIT",
 	"engines": {
